[workspace]
members = ["crate/findex", "crate/memories"]
resolver = "2"

[workspace.package]
# This is not a debug release but a minor: v8.1.0
version = "8.0.2"
authors = [
    "Bruno Grieder <bruno.grieder@cosmian.com>",
    "Célia Corsin <celia.corsin@cosmian.com>",
    "Chloé Hébant <chloe.hebant@cosmian.com>",
    "Emmanuel Coste <emmanuel.coste@cosmian.com>",
    "Hatem Mnaouer <hatem.mnaouer@cosmian.com>",
    "Théophile Brézot <theophile.brezot@cosmian.com>",
]
categories = ["cryptography"]
edition = "2021"
keywords = ["SSE"]
license = "BUSL-1.1"
repository = "https://github.com/Cosmian/findex/"
description = "Symmetric Searchable Encryption"
readme = "README.md"


[workspace.dependencies]
agnostic-lite = { version = ">=0.5.6" }
cosmian_crypto_core = { version = "10.2", default-features = false, features = [
    "macro",
    "sha3",
] }
criterion = { version = "0.6" }
smol-macros = { version = "0.1" }
tokio = { version = "1.46" }
# Still not okay.
futures = "0.3.31"
