[build-system]
requires = ["maturin>=0.13,<0.15"]
build-backend = "maturin"

[tool.maturin]
# add files from `python/cosmian_findex` to the python package
python-source = "python"

[project]
name = "findex"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cffi"]
