[package]
name = "findex_sqlite"
version = "0.1.0"
edition = "2021"

[lib]
name = "cosmian_findex_sqlite"
path = "src/lib.rs"

[dependencies]
base64 = "0.21"
rusqlite = "0.28"
cosmian_findex = { path = ".." }
cosmian_crypto_core = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
faker_rand = "0.1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_futures"], default_features = false }
futures = "0.3"

[[bench]]
harness = false
name = "benches"
