[package]
name = "cosmian_findex_memories"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"

[lib]
name = "cosmian_findex_memories"
path = "src/lib.rs"

[features]
redis-mem = ["redis"]
sqlite-mem = ["async-sqlite"]
postgres-mem = ["deadpool-postgres", "tokio", "tokio-postgres"]
test-utils = ["cosmian_findex/test-utils"]

[dependencies]
async-sqlite = { version = "0.5", optional = true }
cosmian_findex = { path = "../findex", version = "8.0" }
deadpool-postgres = { version = "0.14", optional = true }
redis = { version = "0.32", default-features = false, features = [
    "connection-manager",
    "tokio-comp",
], optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
tokio-postgres = { version = "0.7", optional = true, features = [
    "array-impls",
] }


[dev-dependencies]
cosmian_crypto_core.workspace = true
cosmian_findex = { path = "../findex", version = "8.0", features = [
    "test-utils",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }
futures = { version = "0.3" }
rand = "0.9"
rand_distr = "0.5"

[[bench]]
name = "benches"
harness = false
required-features = ["redis-mem", "sqlite-mem", "postgres-mem", "test-utils"]

[[example]]
name = "example"
required-features = ["redis-mem", "sqlite-mem", "postgres-mem"]
