[package]
name = "cosmian_memories"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"

[lib]
name = "cosmian_memories"
path = "src/lib.rs"

[features]
redis-mem = ["redis"]
sqlite-mem = ["async-sqlite"]
postgres-mem = ["deadpool-postgres", "tokio", "tokio-postgres"]
test-utils = ["tokio"]

[dependencies]
agnostic-lite = { workspace = true }
async-sqlite = { version = "0.5", optional = true }
cosmian_crypto_core.workspace = true
deadpool-postgres = { version = "0.14", optional = true }
redis = { version = "0.32", default-features = false, features = [
    "connection-manager",
    "tokio-comp",
], optional = true }
tokio = { workspace = true, optional = true }
tokio-postgres = { version = "0.7", optional = true, features = [
    "array-impls",
] }

[dev-dependencies]
agnostic-lite = { workspace = true, features = ["tokio", "smol"] }
cosmian_crypto_core.workspace = true
smol-macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
